# Data_Management_System

./: CMakeLists.txt  CustomItemDelegate.cpp  CustomItemDelegate.h  DataDialog.cpp  DataDialog.h  ItemDetailsWidget.cpp  ItemDetailsWidget.h  MainWIndow.h  MainWindow.cpp  README.md  SearchResultDialog.cpp  SearchResultDialog.h
